--- a/02-插值操作/03-v-html的指令.html
+++ b/02-插值操作/03-v-html的指令.html
@@ -7,6 +7,7 @@
 	<body>
 		<div id="app">
 			{{ message }}
+			<!-- 这个v-html会渲染到h2标签内 -->
 			<h2 v-html="url"></h2>
 			<h2 v-html="img"></h2>
 		</div>
