--- a/01-Vue初体验/01-HelloVueJs.html
+++ b/01-Vue初体验/01-HelloVueJs.html
@@ -10,6 +10,10 @@
 			{{ message }}
 			<p>{{name}}</p>
 		</div>
+		<div id="app2">
+			<h2>{{message}}</h2>
+			<h2>{{name}}</h2>
+		</div>
 	</body>
 	<script>
 		//let(在es6中定义变量) const(在es6中定义常量)
@@ -20,5 +24,13 @@
 				name: "Echo"
 			}
 		});
+
+		const app2 = new Vue({
+			el:"#app2",
+			data:{
+				message:"hello",
+				name:"world"
+			}
+		})
 	</script>
 </html>
