--- a/02-插值操作/04-v-text.html
+++ b/02-插值操作/04-v-text.html
@@ -11,6 +11,11 @@
 			<!-- v-text会覆盖掉原有的消息 -->
 			<h2 v-text="message">Echo</h2>
 		</div>
+
+		<div id="app2">
+			<h2>{{message}}</h2>
+			<h2 v-text="message">Echo</h2>
+		</div>
 	</body>
 	<script src="../js/vue.js"></script>
 	<script>
@@ -18,6 +23,12 @@
 			el:"#app",
 			data:{
 				message:"Hello world"
+			}
+		});
+		const app2 = new Vue({
+			el:"#app2",
+			data:{
+				message:"Ni hao zhou jie lun"
 			}
 		});
 	</script>
