--- a/05-事件监听/03-v-on的修饰符.html
+++ b/05-事件监听/03-v-on的修饰符.html
@@ -14,6 +14,11 @@
             aaaaa
             <button @click="btnClick">btn1</button>
         </div>
+
+        <div @click="divClick">
+            aaaaa
+            <button @click.stop="btnClick">btnReview</button>
+        </div>
         <!-- 需要用到v-on的.stop修饰符来进行修饰，取消事件冒泡 -->
         <div @click="divClick">
             aaaaa
@@ -25,6 +30,10 @@
             <!-- 点击提交后，因为是在表单中，其默认行为就是进行post提交，但是想要阻止这种默认行为
             进行自己提交 -->
             <input type="submit" value="提交">
+        </form>
+        <br>
+        <form action="post">
+            <input type="submit" value="提交" @click.prevent="submitClick">
         </form>
         <br>
         <form action="post">
