--- a/06-条件判断/03-v-elseif的使用.html
+++ b/06-条件判断/03-v-elseif的使用.html
@@ -12,6 +12,11 @@
         <h2 v-else-if="socre >= 80">良好</h2>
         <h2>{{result}}</h2>
     </div>
+    <div id="app2">
+        <h2 v-if="score > 100">>100</h2>
+        <h2 v-else-if="score > 90">>90</h2>
+        <h2 v-else-if="score > 80">>80</h2>
+    </div>
 </body>
 <script src="../js/vue.js"></script>
 <script>
@@ -33,6 +38,13 @@
                 }
                 return showMessage;
             }
+        }
+    });
+
+    const app2 = new Vue({
+        el:"#app2",
+        data:{
+            score:92
         }
     });
 </script>
